# math-ai

./: LICENSE  README.md  pyproject.toml
math_ai/: __main__.py
math_ai/languages/: en.txt
